fix: фикс по коде ревью_3